[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uspanel"
version = "0.1.0"
description = "Facetwork domain: US state x year multi-source data panel (Census/BLS)"
requires-python = ">=3.11"
authors = [{name = "Ralph Lemke"}]
dependencies = ["requests", "numpy>=1.24"]

[project.entry-points."facetwork.domains"]
uspanel = "uspanel:domain"

[tool.setuptools.packages.find]
where = ["src"]
